# Simple-Calendar-and-Outcome-Manager

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  README_zh-cn.md  SCOM.cpp  database.cpp  prework.sh
.github/workflows/: build.yml  codeql.yml  release.yml  test.yml
database/: .metadata  CMakeLists.txt  README.md  database.cpp  database.h  ffigen.yaml  pubspec.yaml
database/lib/: database.dart  database_bindings_generated.dart
database/linux/: CMakeLists.txt
database/macos/: database.podspec
database/macos/Classes/: database.c  database.cpp
database/src/: .clang-format  CMakeLists.txt  README.md  database.cpp  database.h  database_macos.cpp  flutter_database.h
database/src/test/: test.cpp
database/test/: test.cpp
database/windows/: CMakeLists.txt
flutter_scom/: README.md  pubspec.yaml
flutter_scom/android/app/: build.gradle
flutter_scom/android/app/src/main/: AndroidManifest.xml
flutter_scom/android/app/src/main/kotlin/com/example/flutter_scom/: MainActivity.kt
flutter_scom/ios/Runner/: Info.plist
flutter_scom/ios/Runner.xcodeproj/: project.pbxproj
flutter_scom/lib/: database.cpp  database.h  learn.dart  main.dart
flutter_scom/linux/: CMakeLists.txt  my_application.cc
flutter_scom/linux/flutter/: generated_plugins.cmake
flutter_scom/macos/Runner.xcodeproj/: project.pbxproj  project_arm64.pbxproj  project_x86_64.pbxproj
flutter_scom/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_scom/macos/Runner/Configs/: AppInfo.xcconfig  Release.xcconfig
flutter_scom/test/: widget_test.dart
flutter_scom/web/: index.html  manifest.json
flutter_scom/windows/: CMakeLists.txt
flutter_scom/windows/flutter/: generated_plugins.cmake
flutter_scom/windows/runner/: Runner.rc  main.cpp
res/ui/: main pane.fxml  main scene.fxml
res/ui/control/: switch button.fxml
res/ui/main/: list scene.fxml  plan list pane.fxml  plan scene.fxml  planning pane.fxml  task list pane.fxml  task scene.fxml
res/ui/main/planning/: plan adding pane.fxml  task adding pane.fxml
src/: App.java
src/database/: DatabaseManager.java  Information.java  Plan.java  Status.java  Task.java  TaskStatus.java
src/resource/: DatabaseResource.java  Resource.java
src/ui/: MainPane.java  MainSceneController.java
src/ui/control/: SwitchBox.java
src/ui/event/: PlanItemEvent.java  PlanningEvent.java  PlanningPaneEvent.java  TaskListEvent.java
src/ui/main/: PlanControl.java  PlanItem.java  PlanListPane.java  PlanningPane.java  TaskItem.java  TaskListPane.java  TaskSceneController.java  TogglePlanItem.java
src/ui/main/planning/: PlanAddingPane.java  TaskAddingPane.java
